# ChangeLog for sys-apps/gawk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.128 2009/08/15 23:53:29 vapier Exp $

*gawk-3.1.7 (15 Aug 2009)

  15 Aug 2009; Mike Frysinger <vapier@gentoo.org> +gawk-3.1.7.ebuild,
  metadata.xml:
  Version bump #280701 by Jeremy Olexa.

  16 May 2009; Mike Frysinger <vapier@gentoo.org> files/filefuncs/Makefile:
  Respect CPPFLAGS when building filefuncs #209129 by Stuart Shelton.

  16 Jan 2009; Harald van Dĳk <truedfx@gentoo.org>
  files/filefuncs/Makefile:
  Fix typo, to use CFLAGS when compiling

  28 Nov 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/gawk-3.1.6-gnuinfo.patch, gawk-3.1.6.ebuild:
  Fix GNU Info files, bug 249130.

  28 Oct 2008; Raúl Porcel <armin76@gentoo.org> gawk-3.1.6.ebuild:
  alpha/ia64 stable #244384

  27 Oct 2008; Brent Baude <ranger@gentoo.org> gawk-3.1.6.ebuild:
  stable ppc64, bug 244384

  26 Oct 2008; Markus Meier <maekke@gentoo.org> gawk-3.1.6.ebuild:
  amd64 stable, bug #244384

  26 Oct 2008; nixnut <nixnut@gentoo.org> gawk-3.1.6.ebuild:
  Stable on ppc wrt bug 244384

  26 Oct 2008; Torsten Veller <tove@gentoo.org> gawk-3.1.6.ebuild:
  Stable on x86 (#244384)

  26 Oct 2008; Jeroen Roovers <jer@gentoo.org> gawk-3.1.6.ebuild:
  Stable for HPPA (bug #244384).

  26 Oct 2008; Ferris McCormick <fmccor@gentoo.org> gawk-3.1.6.ebuild:
  Sparc stable, Bug #244384 and required for Bug #244246.  Looks fine.

  05 May 2008; Mike Frysinger <vapier@gentoo.org>
  +files/autoconf-mktime-2.61.patch, gawk-3.1.6.ebuild:
  Update mktime test #220040.

*gawk-3.1.6 (05 May 2008)

  05 May 2008; Mike Frysinger <vapier@gentoo.org> +gawk-3.1.6.ebuild:
  Version bump #219476 by Conrad Kostecki.

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> gawk-3.1.5-r5.ebuild:
  Stable on mips, per #195212.

  11 Oct 2007; Tom Gall <tgall@gentoo.org> gawk-3.1.5-r5.ebuild:
  stable on ppc64, bug #195212
