@@ -24,6 +24,6 @@ AUX gawk-3.1.6-mint.patch 3080 RMD160 872a3bd83deb045d0f3b33f7891ca863bf1675bc S
 DIST gawk-3.1.6.tar.bz2 1861630 RMD160 e2639935d87d5c9fdb115a58ab1f598b69a76216 SHA1 fb45bded207af6a8e46cd63fcbb6fb064ecee607 SHA256 513fdd5a0bd1b467bd4993eb3adb4690f65fff6857c9e2ed1a3e46d72151cb6c
 DIST gawk-3.1.7.tar.bz2 2365837 RMD160 f35c04e947357404d410d62df87df9d6a88079de SHA1 77dfacb793d579fa6830152d943096bc4362a465 SHA256 f12b76b8963c5a438a56a73223ad29aeb900c7f004deb6242fab3324188ede71
 EBUILD gawk-3.1.6.ebuild 3697 RMD160 fc884a653caf415ca9ca8e93924d40a9a91f7a67 SHA1 102ca709c37cd1a388da50e7c15f985c57f95292 SHA256 3e480a3c2aed5371996d5c89a10797539b027d30bf7f9aad210cd61afaeafa78
-EBUILD gawk-3.1.7.ebuild 3723 RMD160 da57224cd2f9ee9ce0721b6eef98381e2f6888ac SHA1 d8896f0d281c799d0e0b399d8cd453eda5238963 SHA256 41e2c4c834b6ed0375af737f1530a7cc434e7511e736cf1b0014f508de4220de
-MISC ChangeLog 17937 RMD160 d6d77af038a309fea9ba56b79365ca125db60783 SHA1 5408cbb2ebb0430267e7cca0d6f3a4e2f2521026 SHA256 2643e082e7e7fb87ccd59ea4478a3ad13110602423212aac1e643491f41878d3
-MISC metadata.xml 245 RMD160 ede0ab08fadcb30d1055158ce7f6ed8f48a10e89 SHA1 fb14af79d29dd0c303cc421354e70b0657ae02ee SHA256 dbfffafa69728da5daa167a998b875ecfa8453deadd3a57cb384558564f156d4
+EBUILD gawk-3.1.7.ebuild 3676 RMD160 25d621c121c92eebd1504974cb7dd1e033198626 SHA1 fc28c8a81802f8143eb719c0f401bca3f9c6eb96 SHA256 df2d247534fec394c3e3422bf58c4b9a843cf45f1a88c9b9d1e48823eee2ed56
+MISC ChangeLog 18318 RMD160 2d1c70926c6fbddf184bd75abbcb65ba08359868 SHA1 61dd8d600dc2c30b02ab58d61462272a45335042 SHA256 2af3f239706091e0d48f662cd7044b6bf05cbe562aa396004c11c74f1cd99bf9
+MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
