@@ -2,7 +2,4 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>base-system</herd>
-<use>
-	<flag name='libsigsegv'>Support segfault recovery/debugging</flag>
-</use>
 </pkgmetadata>
