@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/gawk
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.128 2009/08/15 23:53:29 vapier Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gawk/ChangeLog,v 1.129 2010/04/25 23:09:30 flameeyes Exp $
+
+  25 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org> gawk-3.1.7.ebuild:
+  Remove libsigsegv USE flag: the dependency, at a minimum, was off (it
+  never uses system copy); nothing in the tree require this enabled, the
+  bundled copy does not work properly with gcc-4.5, and upstream is clueless
+  about autotools so it's impossible to properly patch this to make it
+  right.
 
 *gawk-3.1.7 (15 Aug 2009)
 
